fix label to be visible on line chart

--- a/client/src/components/chart/line-chart/line-chart.css
+++ b/client/src/components/chart/line-chart/line-chart.css
@@ -9,3 +9,7 @@
     font-size: 18px;
     margin-bottom: 10px;
 }
+
+.line-chart-container__label {
+    margin-top: 10px;
+}
